[gd_scene load_steps=4 format=3 uid="uid://cc8cy1rnn86wb"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_us2nw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oea4l"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_udghw"]
height = 1.2

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_us2nw")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_oea4l")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
shape = SubResource("CapsuleShape3D_udghw")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="RayChecker" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 2, 0)
